--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1214,6 +1214,36 @@ h2.title {
 	background:#ccccc6;
 }
 
+.miproducto-information{
+    border: 1px solid #F7F7F0;
+  overflow: hidden;
+  padding-bottom: 60px;
+  padding-left: 60px;
+  padding-top: 60px;
+  position: relative;
+}
+.miproducto-information h2{
+    color: #363432;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  margin-top: 0;
+}
+.miproducto-information p {
+    color: #696763;
+  font-family: 'Roboto', sans-serif;
+  margin-bottom: 5px;
+}
+
+.miproducto-information span{
+  color: #FE980F;
+  float: left;
+  font-family: 'Roboto', sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  margin-right: 20px;
+  margin-top: 0px;
+}
+
 .product-information {
   border: 1px solid #F7F7F0;
   overflow: hidden;
